// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`eia-environmental-impact-schedule GET /change should render the development category change page with "Other" radio option checked if eiaEnvironmentalImpactSchedule is null 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What is the development category?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule"
                                        name="eiaEnvironmentalImpactSchedule" type="radio" value="schedule-1">
                                        <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule">Schedule 1</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule-2"
                                        name="eiaEnvironmentalImpactSchedule" type="radio" value="schedule-2">
                                        <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule-2">Schedule 2</label>
                                    </div>
                                    <div class="govuk-radios__divider">or</div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule-4"
                                        name="eiaEnvironmentalImpactSchedule" type="radio" value="other" checked>
                                        <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule-4">Other</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`eia-environmental-impact-schedule GET /change should render the development category change page with "Schedule 1" radio option checked if eiaEnvironmentalImpactSchedule is "schedule-1" 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What is the development category?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule"
                                        name="eiaEnvironmentalImpactSchedule" type="radio" value="schedule-1" checked>
                                        <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule">Schedule 1</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule-2"
                                        name="eiaEnvironmentalImpactSchedule" type="radio" value="schedule-2">
                                        <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule-2">Schedule 2</label>
                                    </div>
                                    <div class="govuk-radios__divider">or</div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="eiaEnvironmentalImpactSchedule-4"
                                        name="eiaEnvironmentalImpactSchedule" type="radio" value="other">
                                        <label class="govuk-label govuk-radios__label" for="eiaEnvironmentalImpactSchedule-4">Other</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
